--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -55,23 +55,12 @@
                             </div> 
                         <div class="container-title-input">
                             <p>Bike Description </p>
-                            <textarea id="text-area" name="description" rows="10" cols="50" placeholder="Write a description" required > <%= edit ? edit.description : null%> </textarea>
+                            <textarea id="text-area" name="description" maxlength="250" minlength="30" placeholder="Write a description" required > <%= edit ? edit.description : null%> </textarea>
                         </div>
                     </div>
-                    <input type="hidden" name="_id" value="<%=edit ? edit._id  : null%>">
+                    <input type="hidden" name="id" value="<%=edit ? edit.id  : null%>">
                  <div class="container-send"> <input class="boton" type="submit" value="Submit" /></div>
             </form>
         </article>
     </main>
-    <script>
-       console.log("caca") 
-        if(edit){
-            showSelected(edit.modelOfBike)
-        }
-        function showSelected(model) {
-            let option= document.getElementById(model)
-            option.selected=true
-        }
-    </script>
     <%- include('partials/footer.ejs') %> 
-   <!--  <option value="<%= edit ? edit.modelOfBike : null%>"> <%=edit ? edit.modelOfBike : "Select your model"%></option>> -->
